@@ -47,11 +47,8 @@ ini_set('session.cookie_lifetime', 0);
 ini_set('session.bug_compat_42', false);
 ini_set('session.bug_compat_warn', true);
 
-// use more secure session ids (with PHP 5)
-if (substr(PHP_OS, 0, 3) != 'WIN') {
-    ini_set('session.hash_function', 1);
-    ini_set('session.hash_bits_per_character', 6);
-}
+// use more secure session ids
+ini_set('session.hash_function', 1);
 
 // some pages (e.g. stylesheet) may be cached on clients, but not in shared
 // proxy servers
